// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngredientItem component renders an ingredient by default 1`] = `
<div
  className="asdf"
>
  <h2
    className="asdf"
  />
  <button
    className="addIngredientButton"
    onClick={[Function]}
    type="button"
  >
    REMOVE
  </button>
</div>
`;

exports[`IngredientItem component renders an ingredient given props 1`] = `
<div
  className="asdf"
  key="a"
>
  <h2
    className="asdf"
  >
    test-class-name
  </h2>
  <button
    className="addIngredientButton"
    onClick={[Function]}
    type="button"
  >
    REMOVE
  </button>
</div>
`;
